--- a/src/main/webapp/estilos.css
+++ b/src/main/webapp/estilos.css
@@ -57,8 +57,14 @@ header{
 
 #imagen1 {
   height: 450px;
-  background-image:url(../img/studio.jpg);
-  background-size: cover;;
+  background-image:url(img/a1.png);
+  background-size: cover;
+}
+
+#imagen11 {
+  height: 450px;
+  background-image:url(img/a2.png);
+  background-size: cover;
 }
 
 .artista1 {
@@ -93,7 +99,7 @@ header{
 #imagen2 {
   width: 200px
   height: 200px;
-  background-image:url(../img/studio.jpg);
+  background-image:url(img/a2.png);
   background-size: cover;
   position: static;
 }
